[package]
name = "deskent"
version = "0.1.0"
authors = ["Thomas Kluyver <thomas@kluyver.me.uk>"]
repository = "https://github.com/takluyver/deskent"
license = "MIT"
description = "Find and inspect desktop entry files"
readme = "README.md"

[dependencies]
clap = "~2.31"
rust-ini = "0.12.0"
dirs = "1.0"
