[package]
name = "deskent"
version = "0.2.0"
authors = ["Thomas Kluyver <thomas@kluyver.me.uk>"]
repository = "https://github.com/takluyver/deskent"
license = "MIT"
description = "Find and inspect desktop entry files"
readme = "README.md"
keywords = ["desktop-entry", "xdg"]
categories = ["command-line-utilities"]

[dependencies]
clap = "~2.33"
rust-ini = "0.17.0"
dirs = "1.0"
